--- a/css/main.css
+++ b/css/main.css
@@ -49,19 +49,41 @@ p {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .container .container {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container .container {
+    width: 738px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container .container {
+    width: 1170px;
+  }
 }
 
 .button, .footer-button {
@@ -200,7 +222,12 @@ img {
 .hero {
   background-color: #2f303a;
   text-align: center;
-  padding: 200px 0;
+  padding: 118px 0;
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+  }
 }
 
 .overlay {
@@ -215,21 +242,32 @@ img {
   margin-left: auto;
 }
 
-.hero-title {
-  margin: 0 auto;
-  width: 696px;
-  margin-bottom: 30px;
-  color: #ffffff;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+@media screen and (min-width: 480px) {
+  .hero-title {
+    width: 360px;
+    margin: 0 auto;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-bottom: 30px;
+  }
 }
-
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 .button, .footer-button {
   display: inline-block;
-  padding: 10px 32px;
+  width: 200px;
+  height: 50px;
+  padding: 10px 24px;
   border-radius: 4px;
   border: none;
   -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -246,6 +284,12 @@ img {
 }
 .button:hover, .footer-button:hover, .button:focus, .footer-button:focus {
   background-color: #188ce8;
+}
+@media screen and (min-width: 1200px) {
+  .button, .footer-button {
+    padding: 10px 32px;
+    width: 216px;
+  }
 }
 
 .backdrop {
@@ -485,33 +529,56 @@ textarea:hover, textarea:focus {
   background-color: #2196f3;
 }
 
-.features__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .features__list {
+    max-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+.features__list > li {
+  -ms-flex-preferred-size: calc((100% - 30px) * 1 / 2);
+      flex-basis: calc((100% - 30px) * 1 / 2);
+  display: block;
+}
+@media screen and (min-width: 1200px) {
+  .features__list > li {
+    -ms-flex-preferred-size: 270px;
+        flex-basis: 270px;
+  }
 }
 
 .features__title {
-  -ms-flex-preferred-size: 270px;
-      flex-basis: 270px;
-  margin-bottom: 10px;
-  color: #212121;
+  width: 100%;
+  height: 16px;
+  font-family: "Roboto";
+  font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.14px;
+  text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #212121;
+  margin-bottom: 10px;
 }
 
 .features__text {
-  width: 270px;
+  width: 100%;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-bottom: 30px;
+  color: #757575;
 }
 
 .features__icon {
+  width: 100%;
+  height: 120px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -521,9 +588,7 @@ textarea:hover, textarea:focus {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 270px;
-  height: 120px;
-  background-color: #f5f4fa;
+  background: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
 }
@@ -660,23 +725,53 @@ textarea:hover, textarea:focus {
 }
 
 .clients__title {
-  margin-bottom: 50px;
-  color: #212121;
+  font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
-  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .clients__list {
+  max-width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px;
+}
+@media screen and (max-width: 480px) {
+  .clients__list > li {
+    -ms-flex-preferred-size: calc((100% - 30px) * 1 / 2);
+        flex-basis: calc((100% - 30px) * 1 / 2);
+    display: block;
+  }
+}
+@media screen and (min-width: 767px) {
+  .clients__list > li {
+    -ms-flex-preferred-size: calc((100% - 30px) * 2 / 3);
+        flex-basis: calc((100% - 30px) * 2 / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__list > li {
+    -ms-flex-preferred-size: 170px;
+        flex-basis: 170px;
+  }
 }
 
 .clients__link {
+  height: 92px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -686,8 +781,6 @@ textarea:hover, textarea:focus {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 170px;
-  height: 92px;
   color: #afb1b8;
   border-radius: 4px;
   border: 1px solid #afb1b8;
