--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,23 +1,47 @@
 .clients__title {
-  margin-bottom: 50px;
-  color: $title-text-color;
+  font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
-  letter-spacing: 0.03em;
-}
+  color: $title-text-color;
+  margin-bottom: 30px;
 
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
+}
 .clients__list {
+  max-width: 100%;
   display: flex;
-  gap: 30px;
+  flex-wrap: wrap;
+  gap: $card-sed-gap;
+  @media screen and (max-width: 480px) {
+    & > li {
+      flex-basis: calc(((100% - 30px) * 1) / 2);
+      display: block;
+    }
+  }
+
+  @media screen and (min-width: 767px) {
+    & > li {
+      flex-basis: calc(((100% - 30px) * 2) / 3);
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    & > li {
+      flex-basis: 170px;
+    }
+  }
 }
 .clients__link {
+  height: 92px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
-  height: 92px;
   color: $color-social-link;
   border-radius: 4px;
   border: 1px solid $color-social-link;
