--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,7 +1,11 @@
 .hero {
   background-color: $color-footer-header;
   text-align: center;
-  padding: 200px 0;
+  padding: 118px 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+  }
 }
 .overlay {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -15,21 +19,33 @@
   margin-left: auto;
 }
 
-.hero-title {
-  margin: 0 auto;
-  width: 696px;
-  margin-bottom: 30px;
-  color: $primery-bgc-color;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+@media screen and (min-width: 480px) {
+  .hero-title {
+    width: 360px;
+    margin: 0 auto;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: $primery-bgc-color;
+    margin-bottom: 30px;
+  }
 }
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
 .button {
   display: inline-block;
-  padding: 10px 32px;
+  width: 200px;
+  height: 50px;
+  padding: 10px 24px;
   border-radius: 4px;
   border: none;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -46,5 +62,10 @@
   &:hover,
   &:focus {
     background-color: $background-color-btn;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 10px 32px;
+    width: 216px;
   }
 }
