--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,17 +8,39 @@
   }
 }
 .overlay {
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/foto\ hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  max-width: 1600px;
-  height: 600px;
   margin-right: auto;
   margin-left: auto;
-}
 
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero/hero\ mobail\ 1x.jpg.jpg);
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient((to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4))),
+      url(../images/hero/hero\ mobail\ 2x.jpg.jpg);
+  }
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/tablet\ 1x.jpg.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient((to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4))),
+      url(../../images/hero/tablet\ 2x.jpg.jpg);
+  }
+
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/hero/decktop\ 1x.jpg.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient((to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4))),
+        url(../../images/hero/decktop\ 2x.jpg.jpg);
+    }
+  }
+}
 @media screen and (min-width: 480px) {
   .hero-title {
     width: 360px;
