--- a/css/main.css
+++ b/css/main.css
@@ -624,6 +624,11 @@ textarea:hover, textarea:focus {
 .work {
   padding-top: 0;
 }
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
+}
 
 .work__title {
   margin-bottom: 50px;
@@ -692,8 +697,33 @@ textarea:hover, textarea:focus {
 
 .team__list {
   display: block;
-  /*display: flex;
-  gap: $card-sed-gap;*/
+}
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+
+.team__item {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    -ms-flex-preferred-size: calc((100% - 30px) * 1 / 2);
+        flex-basis: calc((100% - 30px) * 1 / 2);
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    -ms-flex-preferred-size: 270px;
+        flex-basis: 270px;
+  }
 }
 
 .team__card {
@@ -707,7 +737,7 @@ textarea:hover, textarea:focus {
 
 .team__card-title {
   margin-bottom: 10px;
-  color: #757575;
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -784,17 +814,17 @@ textarea:hover, textarea:focus {
       flex-wrap: wrap;
   gap: 30px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .clients__list > li {
     -ms-flex-preferred-size: calc((100% - 30px) * 1 / 2);
         flex-basis: calc((100% - 30px) * 1 / 2);
     display: block;
   }
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .clients__list > li {
-    -ms-flex-preferred-size: calc((100% - 30px) * 2 / 3);
-        flex-basis: calc((100% - 30px) * 2 / 3);
+    -ms-flex-preferred-size: 226px;
+        flex-basis: 226px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -835,29 +865,51 @@ textarea:hover, textarea:focus {
   padding: 60px 0;
 }
 
-.footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .footer-logo {
   display: block;
+  margin: 0;
+  padding: 0;
+  text-align: center;
   margin-bottom: 20px;
   color: #ffffff;
   font-family: Raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.38;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
 }
+@media screen and (min-width: 1200px) {
+  .footer-logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+
+.footer-item {
+  text-align: center;
+}
 
 .footer-item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .footer-list .link,
@@ -889,14 +941,25 @@ address .link:hover, address .link:focus {
 }
 
 .footer-link {
-  width: 206px;
-  height: 80px;
-  margin-left: 70px;
+  margin: 0;
+  margin-top: 60px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-link {
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-link {
+    width: 206px;
+    height: 80px;
+    margin-left: 70px;
+  }
 }
 
 .footer-text {
-  -ms-flex-preferred-size: 145px;
-      flex-basis: 145px;
+  display: inline-block;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -904,6 +967,12 @@ address .link:hover, address .link:focus {
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-text {
+    -ms-flex-preferred-size: 145px;
+        flex-basis: 145px;
+  }
 }
 
 .footer-list-icon {
@@ -946,8 +1015,29 @@ address .link:hover, address .link:focus {
   fill: currentColor;
 }
 
+@media screen and (min-width: 1200px) {
+  form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .footer-form {
-  margin-left: auto;
+  margin: 0;
+  text-align: center;
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .footer-form {
+    margin-left: 160px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    margin: 0;
+    margin-left: auto;
+  }
 }
 
 .form-text {
@@ -969,7 +1059,7 @@ address .link:hover, address .link:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 28px;
+  padding: 10px 31px;
   width: 200px;
   height: 50px;
   font-style: normal;
@@ -981,7 +1071,11 @@ address .link:hover, address .link:focus {
   background: #2196f3;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  margin-left: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-button {
+    margin-left: 12px;
+  }
 }
 
 .footer-icon-form {
@@ -989,7 +1083,8 @@ address .link:hover, address .link:focus {
 }
 
 .form-email {
-  width: 358px;
+  margin-bottom: 20px;
+  width: 450px;
   height: 50px;
   font-size: 16px;
   line-height: 1.25;
@@ -1003,8 +1098,23 @@ address .link:hover, address .link:focus {
   padding-top: 15px;
   padding-bottom: 15px;
 }
+@media screen and (min-width: 768px) {
+  .form-email {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form-email {
+    width: 358px;
+    margin: 0;
+  }
+}
 
 .btn {
+  margin: 0;
+  display: inline-block;
   border-radius: 4px;
   border: none;
   cursor: pointer;
@@ -1016,12 +1126,10 @@ address .link:hover, address .link:focus {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
-  margin-bottom: 40px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-bottom: 0;
 }
 .btn:hover, .btn:focus {
   background-color: #2196f3;
@@ -1034,11 +1142,40 @@ address .link:hover, address .link:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 8px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+@media screen and (min-width: 768px) {
+  .buttons-list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    margin-bottom: 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .buttons-list {
+    margin-bottom: 50px;
+  }
+}
+
+.btn-item {
+  display: block;
+  -ms-flex-preferred-size: calc((100% - 8px) * 1 / 3);
+      flex-basis: calc((100% - 8px) * 1 / 3);
+}
+@media screen and (min-width: 768px) {
+  .btn-item {
+    -ms-flex-preferred-size: calc((100% - 8px) * 4 / 5);
+        flex-basis: calc((100% - 8px) * 4 / 5);
+  }
 }
 
 .portfolio-list {
