--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,4 +1,6 @@
 .btn {
+  margin: 0;
+  display: inline-block;
   border-radius: 4px;
   border: none;
   cursor: pointer;
@@ -10,9 +12,7 @@
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
-  margin-bottom: 40px;
   transition: color $animation, background-color $animation, box-shadow $animation;
-  margin-bottom: 0;
 
   &:hover,
   &:focus {
@@ -25,9 +25,25 @@
 
 .buttons-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
-  justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  justify-content: flex-start;
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
+}
+.btn-item {
+  display: block;
+  flex-basis: calc(((100% - 8px) * 1) / 3);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(((100% - 8px) * 4) / 5);
+  }
 }
 
 .portfolio-list {
