--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -19,10 +19,23 @@
 }
 .team__list {
   display: block;
-  /*display: flex;
-  gap: $card-sed-gap;*/
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $card-sed-gap;
+  }
 }
+.team__item {
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(((100% - $card-sed-gap) * 1) / 2);
+    margin-bottom: 0;
+  }
 
+  @media screen and (min-width: 1200px) {
+    flex-basis: 270px;
+  }
+}
 .team__card {
   padding: 30px 0;
   text-align: center;
@@ -34,7 +47,7 @@
 
 .team__card-title {
   margin-bottom: 10px;
-  color: $primery-text-color;
+  color: $title-text-color;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
